# PyRth

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  instructions.md  pyproject.toml  requirements.txt  setup.py
PyRth/: __init__.py  transient_core.py  transient_data_export.py  transient_defaults.py  transient_engine.py  transient_figures.py  transient_filter_functions.py  transient_mpfr_utils.py  transient_optimization.py  transient_optimizer.py  transient_scripts.py  transient_utils.py
PyRth/exporter/: transient_base_exporter.py  transient_base_fig.py  transient_csv_exporter.py  transient_figure_exporter.py  transient_figures.py  transient_io_manager.py
PyRth/utils/: optimizer_utils.py  transient_utils.py
docs/: _autogen_eval_param_table.rst  api.rst  changelog.rst  conf.py  evaluation_bootstrap.rst  evaluation_modules_overview.rst  evaluation_prediction.rst  evaluation_set.rst  evaluation_standard.rst  generate_eval_param_table.py  index.rst  installation.rst  make.bat  requirements.txt  theory.rst  usage.rst  user_guide.rst
docs/_templates/: layout.html
docs/evaluation_modules/: evaluation_comparison.rst  evaluation_optimization.rst  evaluation_theoretical.rst
docs/theory/: nid_overview.rst  optimization_techniques.rst  structure_functions.rst
docs/user_guide/: advanced_workflows.rst  calibration_guide.rst  data_extraction.rst  data_preparation.rst  getting_started.rst  troubleshooting.rst  usage.rst
tests/: test_data.py  test_transient_base.py  test_transient_evaluations.py  transient_evaluations_test_data.py
tests/assertions/: __init__.py  bootstrap_assertions.py  comparison_assertions.py  optimization_assertions.py  standard_assertions.py  standard_set_assertions.py  temperature_prediction_assertions.py  theoretical_assertions.py
(+48 files in other folders)
