[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyRth"
version = "0.1.0"
description = "A tool for thermal transient analysis"
authors = [
    { name = "Nils J. Ziegeler", email = "ziegeler.nilsjonas@fh-swf.de" }
]
dependencies = [
    "numpy>=1.26.0,<2.0.0",
    "scipy>=1.11.0,<2.0.0",
    "matplotlib>=3.8.0,<4.0.0",
    "numba>=0.59.0,<1.0.0",
    "gmpy2>=2.1.2,<3.0.0",
    "pandas>=2.0.0,<3.0.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.10"

[tool.setuptools]
packages = ["PyRth"]
