[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyRth"
version = "1.1"
description = "A tool for thermal transient analysis"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Nils J. Ziegeler", email = "ziegeler.nilsjonas@fh-swf.de" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]


dependencies = [
    "numpy>=1.26.4,<2.0.0",
    "scipy>=1.14.1,<2.0.0",
    "matplotlib>=3.9.3,<4.0.0",
    "numba>=0.60.0,<1.0.0",
    "gmpy2>=2.2.1,<3.0.0",
    "scikit-learn>=1.4.2,<2.0.0"
]

[project.optional-dependencies]
docs = [
    "sphinx>=4",
    "sphinx-rtd-theme",
    "sphinx-proof",
    "myst-parser>=0.18.0",
]
dev = [
    "pytest>=7.0.0",
    "parameterized>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/nizie002/PyRth"

[tool.setuptools]
packages = ["PyRth", "PyRth.utils", "PyRth.exporter"]